<resources>
    <string name="app_name">Pools Wallet</string>
    <string name="connections">CONNECTIONS</string>
    <string name="account">ACCOUNT</string>
    <string name="security_amp_privacy"><![CDATA[SECURITY & PRIVACY]]></string>
    <string name="pools_wallet_information">POOLS WALLET INFORMATION</string>
    <string name="i_have_read_and_agree_to_the_term_of_service_and_privacy_policy">I have read and agree to the Term of service and Privacy policy</string>
    <string name="create_a_new_wallet">Create a new Wallet</string>
    <string name="text1">\@</string>
    <string name="volume_24_hour">Volume 24 hour</string>
    <string name="string_90_days">3 month</string>
    <string name="string_30_days">1 month</string>
    <string name="string_24_hour">1 day</string>
    <string name="string_market_cap">Market Cap</string>
    <string name="string_60_days">2 month</string>
    <string name="string_7_days">1 week</string>
    <string name="string_1_hour">1 hour</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="all_in_one_dapp">All in one Dapp</string>
    <string name="store_and_protect_all_your_decentralized_assets_within_a_dapp">Store and protect all your decentralized assets within a Dapp</string>
    <string name="create_a_new_wallet_login">Create a new Wallet</string>
    <string name="import_wallet_login">Import Wallet</string>
    <string name="no_nfts_found">No NFTs Found</string>
    <string name="string_import">Import</string>
    <string name="receive">Receive</string>
    <string name="enter_or_scan_your_private_key">Enter or scan your private key</string>
    <string name="enter_or_scan_your_private_key_text">Enter or scan your private key</string>
    <string name="pick_a_name_for_your_wallet">PICK A NAME FOR YOUR WALLET</string>
    <string name="name">\@name</string>
    <string name="import_wallet_text">Import Wallet</string>
    <string name="enter_your_12_word_phrase">Enter your 12-word phrase</string>
    <string name="_12_sometime_24_words_separated_with_a_space">*12 (sometime 24) words separated with a space</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="my_brower">My Brower</string>
    <string name="light">Light</string>
    <string name="white">White</string>
    <string name="auto">Auto</string>
    <string name="black">Black</string>
    <string name="tablayout">tabLayout</string>
    <string name="confirm">Confirm</string>
    <string name="wallet">Wallet</string>
    <string name="retry">Retry</string>
    <string name="_24h_vol">24h Vol</string>
    <string name="volume_change_24h">Volume Change 24h</string>

    <string name="receiver">Receiver</string>
    <string name="send">Send</string>
    <string name="swap">Swap</string>
    <string name="scan">Scan</string>
    <string name="next">Next</string>
    <string name="recovery">RECOVERY</string>
    <string name="wallet_list">Wallet List</string>
    <string name="account1">Account1</string>
    <string name="hello_account_1">Hello! Account 1</string>
    <string name="rewards">Rewards</string>
    <string name="recipientList">RecipientList</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="backup">Backup</string>
    <string name="asset_management">Asset Management</string>
    <string name="referral">Referral</string>
    <string name="change_network">Change NetWork</string>
    <string name="pools_chain">POOLS Chain</string>
    <string name="backupSetting">Backup</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="recovery_phrase_setting">Recovery Phrase</string>
    <string name="language">Language</string>
    <string name="pools_vitual_assistant">Pools Vitual Assistant</string>
    <string name="theme">Theme</string>
    <string name="ti_ng_vi_t">Tiếng Việt</string>
    <string name="pools_wallet_information_setting">Pools Wallet Information</string>
    <string name="other">OTHER</string>
    <string name="confirm_secret_recovery_phrase">Confirm Secret Recovery Phrase</string>
    <string name="select_each_word_in_the_order_it_was_presented_to_you">Select each word in the order it was presented to you</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="lt_lt"><![CDATA[<<]]></string>

    <string name="tab_market_watch_market">Watch Market</string>
    <string name="tab_market_news">News</string>

    <string name="no_data">No data</string>
    <string name="hint_search_for_tokens">Search for tokens...</string>
    <string name="str_sort_descending">DESCENDING</string>
    <string name="str_sort_asc">ASCENDING</string>
    <string name="str_market_cap">Market Cap</string>
    <string name="str_select_mode">Select Mode</string>
    <string name="str_wallet_name">WALLET NAME</string>
    <string name="str_protect_your_wallet">PROTECT YOUR WALLET</string>
    <string name="str_add_one_more_security">Add one more security layer to protect your crypto assets</string>

</resources>