<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pinDisplayContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@id/pin_key_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/llToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal">
                <FrameLayout
                    android:id="@+id/frmBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/space_start_end">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen24dp"
                        android:layout_height="@dimen/dimen24dp"
                        app:tint="@color/black"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llViewTop"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/llToolBar"
                android:layout_height="wrap_content">
                <com.wallet.pools.presentation.widget.TvRegular
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:id="@+id/tvTitle"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Put in your pin number"/>
                <com.wallet.pools.presentation.widget.TvRegular
                    android:id="@+id/tvSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    tools:text="(This pincode will unclock your Pools wallet only on this device)"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llViewTop">

                <ImageView
                    android:id="@+id/pinDisplay1"
                    android:layout_width="@dimen/dimen12dp"
                    android:layout_height="@dimen/dimen12dp"
                    android:layout_marginHorizontal="@dimen/dimen12dp"
                    android:src="@drawable/pin_empty" />

                <ImageView
                    android:id="@+id/pinDisplay2"
                    android:layout_width="@dimen/dimen12dp"
                    android:layout_height="@dimen/dimen12dp"
                    android:layout_marginHorizontal="@dimen/dimen12dp"
                    android:src="@drawable/pin_empty" />

                <ImageView
                    android:id="@+id/pinDisplay3"
                    android:layout_width="@dimen/dimen12dp"
                    android:layout_height="@dimen/dimen12dp"
                    android:layout_marginHorizontal="@dimen/dimen12dp"
                    android:src="@drawable/pin_empty" />

                <ImageView
                    android:id="@+id/pinDisplay4"
                    android:layout_width="@dimen/dimen12dp"
                    android:layout_height="@dimen/dimen12dp"
                    android:layout_marginHorizontal="@dimen/dimen12dp"
                    android:src="@drawable/pin_empty" />

                <ImageView
                    android:id="@+id/pinDisplay5"
                    android:layout_width="@dimen/dimen12dp"
                    android:layout_height="@dimen/dimen12dp"
                    android:layout_marginHorizontal="@dimen/dimen12dp"
                    android:src="@drawable/pin_empty" />

                <ImageView
                    android:id="@+id/pinDisplay6"
                    android:layout_width="@dimen/dimen12dp"
                    android:layout_height="@dimen/dimen12dp"
                    android:layout_marginHorizontal="@dimen/dimen12dp"
                    android:src="@drawable/pin_empty" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:id="@+id/pin_key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:columnCount="3"
            android:rowCount="4"
            android:useDefaultMargins="true"
            android:paddingHorizontal="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pinDisplayContainer">

            <Button
                android:id="@+id/btnKey1"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btnKey2"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btnKey3"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnKey4"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btnKey5"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btnKey6"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btnKey7"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btnKey8"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btnKey9"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_9" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llBiometric"
                android:gravity="center"
                android:background="@color/color_06C270_unchanged"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_fingerprint_24"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnKey0"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btnKeyDelete"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:text="@string/lt_lt" />

        </GridLayout>

    </LinearLayout>

</FrameLayout>