<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivLogin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_bg_login"/>
    <LinearLayout
        android:id="@+id/llTitle"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ivLogin"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen30dp"
        android:layout_marginHorizontal="@dimen/dimen35dp"
        android:layout_height="wrap_content">
        <com.wallet.pools.presentation.widget.TvBold
            android:id="@+id/tvTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_size_32"
            android:text="@string/all_in_one_dapp"/>
        <com.wallet.pools.presentation.widget.TvRegular
            android:id="@+id/tvSubTitleLogin"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_text_9E9E9E"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_and_protect_all_your_decentralized_assets_within_a_dapp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCreateWallet"
        android:layout_marginBottom="@dimen/dimen30dp"
        app:layout_constraintBottom_toTopOf="@+id/tvImportWallet"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dimen40dp"
        android:background="@drawable/bg_btn_corner_50"
        android:gravity="center"
        android:padding="@dimen/dimen10dp"
        android:layout_height="wrap_content">
        <com.wallet.pools.presentation.widget.TvBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_wallet_login"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_text_white"
            />
    </LinearLayout>
    <com.wallet.pools.presentation.widget.TvSemiBold
        android:layout_marginBottom="@dimen/dimen40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvImportWallet"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_wallet_login"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/color_text_black"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>