<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen20dp"
        android:layout_marginHorizontal="@dimen/space_start_end"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_linear_conner_radius_gray"
            android:backgroundTint="@color/color_F5F5F5"
            android:gravity="top"
            android:hint="@string/enter_or_scan_your_private_key"
            android:minHeight="@dimen/dimen200dp"
            android:autofillHints="name"
            android:padding="@dimen/dimen10dp"
            android:inputType="text" />

        <com.wallet.pools.presentation.widget.TvLight
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen10dp"
            android:textColor="@color/color_text_757575"
            android:text="@string/enter_or_scan_your_private_key_text"
            android:layout_height="wrap_content"/>
        <com.wallet.pools.presentation.widget.TvRegular
            android:textColor="@color/color_text_343434"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_a_name_for_your_wallet"
            android:id="@+id/tvTitleWalletName"/>
        <EditText
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen13dp"
            android:autofillHints="name"
            android:hint='@string/name'
            android:textColor="@color/color_text_black"
            android:background="@drawable/bg_linear_conner_radius_gray"
            android:backgroundTint="@color/color_F5F5F5"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCreatePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/text_size_10"
        android:textSize="@dimen/text_size_16"
        android:layout_marginHorizontal="@dimen/dimen40dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_semi_bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/color_button_06C270"
        android:background="@drawable/bg_linear_conner_radius"
        android:layout_marginBottom="@dimen/dimen20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal" >
        <com.wallet.pools.presentation.widget.TvBold
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_white"
            android:text="@string/import_wallet_text"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>