<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <ImageView
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginVertical="@dimen/dimen10dp"
       android:layout_width="wrap_content"
       android:id="@+id/ivNotFound"
       android:visibility="gone"
       android:layout_height="wrap_content"
       android:src="@drawable/imagenfts"/>
    <com.wallet.pools.presentation.widget.TvRegular
        android:layout_width="match_parent"
        android:text="@string/no_nfts_found"
        android:textColor="@color/color_text_757575"
        android:gravity="center"
        android:id="@+id/tvNFTs"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/dimen15dp"
        app:layout_constraintTop_toBottomOf="@+id/ivNotFound"
        android:layout_height="wrap_content"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/tvNFTs"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_ll_conner_radius_color_06c270"
            android:layout_marginHorizontal="@dimen/dimen10dp"
            android:gravity="center"
            android:padding="@dimen/dimen10dp"
            android:layout_height="wrap_content">
            <com.wallet.pools.presentation.widget.TvSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_text_06C270"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_ll_conner_radius_color_06c270"
            android:layout_marginHorizontal="@dimen/dimen10dp"
            android:padding="@dimen/dimen10dp"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.wallet.pools.presentation.widget.TvSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_import"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_text_06C270"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>