<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scannerQr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoFocusButtonColor="@color/white"
        app:autoFocusButtonVisible="false"
        app:flashButtonColor="@color/white"
        app:flashButtonVisible="false"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="@color/white"
        app:frameCornersRadius="20dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:maskColor="#77000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResultScan"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvResultImage"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResultImage"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/llOption"/>
    <LinearLayout
        android:id="@+id/llOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFlashButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/light"
            android:drawablePadding="10dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white"
            app:drawableTopCompat="@drawable/baseline_flash_on_24" />

        <TextView
            android:id="@+id/imageQr"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:text="@string/my_qr_code"
            app:drawableTopCompat="@drawable/baseline_qr_code_24" />

        <TextView
            android:id="@+id/browse_button"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:text="@string/my_brower"
            android:visibility="visible"
            app:drawableTopCompat="@drawable/baseline_web_24" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>